# sanarch

./: .gitignore  LICENSE  README.md  classes.py  config_file  functions.py  install_deps  install_packages  installer.py  logs  part_file  pyproject.toml  setup.cfg  xmonad-install
archsan/: archinstaller.py  main.py
archsan/lib/: config.py  exceptions.py  parser.py
archsan/lib/disk/: blockdevice.py  filesystem.py  partition.py
archsan/lib/menu/: menu.py
archsan/lib/utils/: bootloader.py
archsan/profiles/: default.yaml
modules/: classes.py  functions.py
profiles/: win-dual-boot.yaml
sanarch/: __main__.py  archinstaller.py
sanarch/lib/: __init__.py  command.py  config.py  general.py  linuxcmd.py  logger.py  parser.py
sanarch/lib/disk/: blockdevice.py  filesystem.py  partition.py
sanarch/lib/utils/: bootloader.py  pacman.py
sanarch/profiles/: default.yaml  win-dual-boot.yaml
scripts/: xorg-nvidia
xmonad-installer/: xmonad-install  xmonad-install-2
