[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sanarch"]

[project]
name = "sanarch"
version="2.0.0"
description = "A script that installs arch linux automatically from a configuration file"
authors = [
  { name = "Santhanu V", email = "vinodsanthanu@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["arch linux", "automated arch installer", "sanarch", "arch installer"]
dependencies = [
    "pyyaml",
]

[project.scripts]
sanarch = "sanarch.__main__:main"
